objects/SLA__c.object
<CustomObject>
    <description>Used to track SLA fields of Loan</description>
    <fields>
        <fullName>CF_ApplicationProcessingCumulative_Days__c</fullName>
        <description>This stores the cumulative days the record was in Application Processing stage</description>
        <label>Application Processing cumulative Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_BookedCumulativeDays__c</fullName>
        <description>This stores the cumulative days the record was in Booked stage</description>
        <label>Booked Cumulative Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_BookingFundingCumulativeDays__c</fullName>
        <description>Used to store the Cumulative days of Booking / Funding stage</description>
        <label>Booking / Funding Cumulative Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_ClosingCumulativeDays__c</fullName>
        <description>This stores the cumulative days the record was in Closing stage</description>
        <label>Closing Cumulative Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_CompleteCumulativeDays__c</fullName>
        <description>This stores the cumulative days the record was in Complete stage</description>
        <label>Complete Cumulative Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_CreditDecisioningCumulativeDays__c</fullName>
        <description>This stores the cumulative days the record was in Approval/CreditDecisioning stage</description>
        <label>CreditDecisioning Cumulative Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_CreditUnderwritingCumulativeDays__c</fullName>
        <description>This stores the cumulative days the record was in Credit Underwriting stage</description>
        <label>Credit Underwriting Cumulative Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_CumulativeHold_Application_Processing__c</fullName>
        <label>CumulativeHold_Application Processing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_CumulativeHold_Credit_Underwriting__c</fullName>
        <label>CumulativeHold Credit Underwriting</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_CumulativeHold_Qualification_Proposal__c</fullName>
        <label>CumulativeHold_Qualification/Proposal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Days_in_Application_Processing__c</fullName>
        <formula>IF( CF_LoanStage__c = &apos;Application Processing&apos;,
IF( ISNULL(  CF_ApplicationProcessingCumulative_Days__c ), (NOW() -  CF_LoanApplicationProcessingStageDate__c ) ,
((NOW() - CF_LoanApplicationProcessingStageDate__c ) + CF_ApplicationProcessingCumulative_Days__c )),CF_ApplicationProcessingCumulative_Days__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Application Processing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Days_in_Booked__c</fullName>
        <formula>IF( CF_LoanStage__c = &apos;Booked&apos;,
IF( ISNULL(   CF_BookedCumulativeDays__c ), (NOW() -   CF_LoanBookedStageDate__c ) ,
((NOW() - CF_LoanBookedStageDate__c ) + CF_BookedCumulativeDays__c)),CF_BookedCumulativeDays__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Booked</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Days_in_Closing__c</fullName>
        <formula>IF( CF_LoanStage__c = &apos;Closing&apos;,
IF( ISNULL(   CF_ClosingCumulativeDays__c ), (NOW() -   CF_LoanClosingStageDate__c ) ,
((NOW() - CF_LoanClosingStageDate__c ) + CF_ClosingCumulativeDays__c	)),CF_ClosingCumulativeDays__c	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Closing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Days_in_Complete__c</fullName>
        <formula>IF( CF_LoanStage__c = &apos;Complete&apos;,
IF( ISNULL(   CF_CompleteCumulativeDays__c ), (NOW() -   CF_LoanCompleteStageDate__c ) ,
((NOW() - CF_LoanCompleteStageDate__c ) + CF_CompleteCumulativeDays__c)),CF_CompleteCumulativeDays__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Days_in_Credit_Decisioning__c</fullName>
        <formula>IF( CF_LoanStage__c = &apos;Credit Decisioning&apos;,
IF( ISNULL(   CF_CreditDecisioningCumulativeDays__c ), (NOW() -   CF_LoanCreditDecisioningStageDate__c ) ,
((NOW() - CF_LoanCreditDecisioningStageDate__c ) + CF_CreditDecisioningCumulativeDays__c)),CF_CreditDecisioningCumulativeDays__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Credit Decisioning</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Days_in_Credit_Underwriting__c</fullName>
        <formula>IF( CF_LoanStage__c = &apos;Credit Underwriting&apos;,
IF( ISNULL(   CF_CreditUnderwritingCumulativeDays__c ), (NOW() -   CF_LoanCreditUnderwritingStageDate__c ) ,
((NOW() - CF_LoanCreditUnderwritingStageDate__c ) + CF_CreditUnderwritingCumulativeDays__c)),CF_CreditUnderwritingCumulativeDays__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Credit Underwriting</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Days_in_Pre_Closing_Due_Diligence__c</fullName>
        <formula>IF( CF_LoanStage__c = &apos;Pre-Closing Due Diligence&apos;,
IF( ISNULL(   CF_PreClosingDDCumulativeDays__c ), (NOW() - CF_Loan_PreClosingDD_Stage_Date__c ) ,
((NOW() - CF_Loan_PreClosingDD_Stage_Date__c ) + CF_PreClosingDDCumulativeDays__c)),CF_PreClosingDDCumulativeDays__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Pre-Closing Due Diligence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Days_in_Qualification_Proposal__c</fullName>
        <formula>IF( CF_LoanStage__c = &apos;Qualification / Proposal&apos;,
IF( ISNULL( CF_QualificationProposalCumulativeDays__c ), (NOW() -  CF_Loan_QualificationProposal_Stage_Date__c) ,
((NOW() -  CF_Loan_QualificationProposal_Stage_Date__c) + CF_QualificationProposalCumulativeDays__c )),CF_QualificationProposalCumulativeDays__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Qualification / Proposal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_DocPrepReviewCumulativeDays__c</fullName>
        <description>This stores the cumulative days the record was in DocPrep &amp; Review stage</description>
        <label>DocPrep &amp; Review Cumulative Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_HoldDays_in_Qualification_Proposal__c</fullName>
        <formula>IF(  CF_LoanHoldStage__c  = &apos;Qualification / Proposal&apos;,
IF(ISNULL( CF_LoanHoldEndTime__c ),
IF( ISNULL(  CF_CumulativeHold_Qualification_Proposal__c  ), (NOW() -  CF_LoanHoldStartTime__c ) ,
((NOW() - CF_LoanHoldStartTime__c ) + CF_CumulativeHold_Qualification_Proposal__c  )), CF_CumulativeHold_Qualification_Proposal__c  ),
CF_CumulativeHold_Qualification_Proposal__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hold Days in Qualification/Proposal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Hold_Days_in_Application_Processing__c</fullName>
        <formula>IF(  CF_LoanHoldStage__c  = &apos;Application Processing&apos;,
IF(ISNULL( CF_LoanHoldEndTime__c ),
IF( ISNULL(   CF_CumulativeHold_Application_Processing__c ), (NOW() -  CF_LoanHoldStartTime__c ) ,
((NOW() - CF_LoanHoldStartTime__c ) + CF_CumulativeHold_Application_Processing__c )), CF_CumulativeHold_Application_Processing__c   ),
CF_CumulativeHold_Application_Processing__c   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hold Days in Application Processing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Hold_Days_in_Credit_Underwriting__c</fullName>
        <formula>IF(  CF_LoanHoldStage__c  = &apos;Credit Underwriting&apos;,
IF(ISNULL( CF_LoanHoldEndTime__c ),
IF( ISNULL(   CF_CumulativeHold_Credit_Underwriting__c ), (NOW() -  CF_LoanHoldStartTime__c ) ,
((NOW() - CF_LoanHoldStartTime__c ) + CF_CumulativeHold_Credit_Underwriting__c )), CF_CumulativeHold_Credit_Underwriting__c ),
CF_CumulativeHold_Credit_Underwriting__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hold Days in Credit Underwriting</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_LoanApplicationProcessinStageDuration__c</fullName>
        <description>Used to store Application Processing stage duration of Loan</description>
        <formula>CF_LoanCreditUnderwritingStageDate__c -  CF_LoanApplicationProcessingStageDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan ApplicationProcessin Stage Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_LoanApplicationProcessingStageDate__c</fullName>
        <description>Used to store Loan ApplicationProcessing Stage Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Loan ApplicationProcessing Stage Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CF_LoanBookedStageDate__c</fullName>
        <description>Used to store Loan Booked Stage Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Loan Booked Stage Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CF_LoanBookingFundingStageDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Loan Booking / Funding Stage Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CF_LoanClosingStageDate__c</fullName>
        <description>Used to store Loan Closing Stage Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Loan Closing Stage Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CF_LoanCompleteStageDate__c</fullName>
        <description>Used to store Loan Complete Stage Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Loan Complete Stage Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CF_LoanCreditDecisioningStageDate__c</fullName>
        <description>Used to store Loan Approval/CreditDecisioning Stage Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Loan CreditDecisioning Stage Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CF_LoanCreditUnderwritingStageDate__c</fullName>
        <description>Used to store Loan Credit Underwriting Stage Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Loan Credit Underwriting Stage Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CF_LoanDocPrepReviewStageDate__c</fullName>
        <description>Used to store Loan DocPrep &amp; Review Stage Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Loan DocPrep &amp; Review Stage Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CF_LoanHoldCumulativeDays__c</fullName>
        <description>Used to store entire Loan Hold Cumulative Days</description>
        <inlineHelpText>This will store the entire Loan Hold Cumulative Days</inlineHelpText>
        <label>Loan Hold Cumulative Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_LoanHoldCumulativeDuration__c</fullName>
        <description>Used to store Loan hold cumulative duration</description>
        <formula>IF(AND(NOT(ISBLANK( CF_LoanHoldStartTime__c)),NOT(ISBLANK( CF_LoanHoldEndTime__c ))),
CF_LoanHoldEndTime__c - CF_LoanHoldStartTime__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Hold Cumulative Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_LoanHoldEndTime__c</fullName>
        <description>Used to store Loan Hold End Time</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Loan Hold End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CF_LoanHoldStageDays__c</fullName>
        <description>Used to store Loan Hold days on each stage and resets when the stage changes</description>
        <inlineHelpText>This will store the Loan Hold days on each stage and resets when the stage changes</inlineHelpText>
        <label>Loan Hold Stage Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_LoanHoldStage__c</fullName>
        <description>This is to store the LoanHoldStage</description>
        <encryptionScheme>None</encryptionScheme>
        <label>LoanHoldStage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_LoanHoldStartTime__c</fullName>
        <description>CLOS Pahse 2 - Used to store Loan Hold Start Time</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Loan Hold Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CF_LoanStage__c</fullName>
        <description>This field gets the value of Loan Stage</description>
        <formula>TEXT(CF_Loan__r.LLC_BI__Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Loan Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Loan_PreClosingDD_Stage_Date__c</fullName>
        <description>Used to store Loan Pre-Closing DD Stage Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Loan Pre-Closing DD Stage Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CF_Loan_QualificationProposal_Stage_Date__c</fullName>
        <description>Used to store loan Qualification / Proposal stage date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Loan Qualification / Proposal Stage Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CF_Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to store Loan Id</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>SLAs</relationshipLabel>
        <relationshipName>CO_SLAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_PreClosingDDCumulativeDays__c</fullName>
        <description>This stores the cumulative days the record was in Pre-Closing DD stage</description>
        <label>Pre-Closing DD Cumulative Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_PriorStageValue__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Prior Stage Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Product_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to populate Product Package Id</description>
        <label>Product Package</label>
        <referenceTo>LLC_BI__Product_Package__c</referenceTo>
        <relationshipLabel>SLAs</relationshipLabel>
        <relationshipName>SLAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_QualificationProposalCumulativeDays__c</fullName>
        <description>This stores the cumulative days the record was in Qualification / Proposal stage</description>
        <label>Qualification / Proposal Cumulative Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SF_Days_in_Booking_Funding__c</fullName>
        <formula>IF( CF_LoanStage__c = &apos;Booking / Funding&apos;,
IF( ISNULL(   CF_BookingFundingCumulativeDays__c ), (NOW() -   CF_LoanBookingFundingStageDate__c ) ,
((NOW() - CF_LoanBookingFundingStageDate__c ) + CF_BookingFundingCumulativeDays__c)),CF_BookingFundingCumulativeDays__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Booking / Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SF_Days_in_Doc_Prep_Review__c</fullName>
        <formula>IF( CF_LoanStage__c = &apos;Doc Prep &amp; Review&apos;,
IF( ISNULL(   CF_DocPrepReviewCumulativeDays__c ), (NOW() -   CF_LoanDocPrepReviewStageDate__c ) ,
((NOW() - CF_LoanDocPrepReviewStageDate__c ) + CF_DocPrepReviewCumulativeDays__c)),CF_DocPrepReviewCumulativeDays__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Doc Prep &amp; Review</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>SLA</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CF_All</fullName>
        <columns>NAME</columns>
        <columns>CF_Loan__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>SLA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SLAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>